--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@ X project
 <br>
 <a href="Gabriel.html">Gabriel Truzzi</a>
 <br>
-<a href="giovani.html">Gabriel Truzzi</a>
+<a href="giovani.html">Giovani Cardoso</a>
 <br>
