--- a/leticia.html
+++ b/leticia.html
@@ -3,26 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leticia!</title>
+    <title>Página da Letícia</title>
     <style>
         body {
-            background-color: pink; 
-            text-align: center; 
-            font-family: Arial, sans-serif; 
-            padding-top: 100px; 
+            background-color: #e91e63; /* rosa chiclete */
+            font-family: 'Quicksand', sans-serif; /* Fonte mais fofa */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            position: relative;
+        }
+        .container {
+            text-align: center;
+            max-width: 600px;
+            padding: 20px;
+            background-color: #ffcbd5;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            position: relative;
+            z-index: 1; /* Garante que o conteúdo fique acima dos elementos estilizados */
         }
         h1 {
-            font-size: 3em; 
-            color: white; 
+            font-size: 3em;
+            color: #e91e63;
+            margin-bottom: 10px;
         }
         p {
-            font-size: 2em; 
-            color: white; 
+            font-size: 1.5em;
+            color: #333;
+            line-height: 1.6;
+            margin-bottom: 20px;
         }
+        .princesa-jujuba {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+        }
+        
     </style>
 </head>
 <body>
-    <h1>Leticia!!!!!!</h1>
-    <p>pagina da Leticia criada!!!!!</p>
+    <div class="left-deco"></div>
+    <div class="right-deco"></div>
+    <div class="container">
+        <h1>Página da Let</h1>
+        <p>oi novos devs da fefelê!</p>
+        <img class="princesa-jujuba" src="https://64.media.tumblr.com/e737ff0045b9a4c8d3b3d6ae5e758447/tumblr_o9c31u22221uzp44mo1_500.gifv" alt="Princesa Jujuba">
+    </div>
 </body>
 </html>
+
+
