Adicionando o nome no index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@ X project
 <br>
 <a href="atenagoras.html">Atenágoras</a>
 <br>
+<a href="annaValim.html">Anna Valim</a>
+<br>
 <a href="ricardofontoura.html">Link Ricardo Fontoura</a>
 <br>
 <a href="augusto.html">Augusto Santiago</a>
 <br>
-<a href="gabriela.html">Gabriela</a> 
+<a href="gabriela.html">Gabriela</a>
 <br>
 <a href="thiago.html">Thiago Gomes Verissimo</a>
 <br>
