--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@ X project
 <br>
 <a href="bruna.html">Bruna Correia de Oliveira</a>
 <br>
-<a href="talita.html">Raphael Feitosa</a>
+<a href="talita.html">Talita Ventura</a>
 <br>
 
