página da maria clara atualizada

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ X project
 <br>
 <a href="raphael.html">Raphael Feitosa</a>
 <br>
-<a href="maria_clara.html">Maria Clara Tameirão</a>
+<a href="mariaclara.html">Maria Clara Tameirão</a>
 <br>
 <a href="neli.html">Néli Maximino</a>
 <br>
