Pagina Anna estilizada

--- a/annaValim.html
+++ b/annaValim.html
@@ -1,4 +1,31 @@
-Anna Carolina Valim
+<!DOCTYPE html>
+<html lang="pt-br">
 
-<br>
-<h1>Funcionando</h1>
+<head>
+  <meta charset="utf-8" />
+  <title>Página da Anna</title>
+</head>
+
+<body>
+  <style>
+    body {
+      background-color: #2bc22b;
+      text-align: center;
+    }
+
+    p {
+      font-size: 1.5rem;
+    }
+
+    img {
+      border: red 1rem solid;
+    }
+  </style>
+
+
+  <h1>Anna Carolina Valim </h1>
+  <p>Boa, está funcionando</p>
+  <img src="https://t4.ftcdn.net/jpg/01/15/20/75/360_F_115207580_US2etunH78I7iMYHOoNVvxQTCIdoPdRj.jpg"
+    alt="Emoji com os polegares para cima">
+
+</body>
