adiciona arquivo alan.html

--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 X project
 
-<br>
+<br />
 <a href="atenagoras.html">Atenágoras</a>
-<br>
+<br />
 <a href="annaValim.html">Anna Valim</a>
-<br>
+<br />
 <a href="ricardofontoura.html">Link Ricardo Fontoura</a>
-<br>
+<br />
 <a href="augusto.html">Augusto Santiago</a>
-<br>
+<br />
 <a href="gabriela.html">Gabriela</a>
-<br>
+<br />
 <a href="thiago.html">Thiago Gomes Verissimo</a>
-<br>
+<br />
 <a href="victor.html">Victor de Oliveira</a>
-<br>
+<br />
 <a href="ricardo_santos.html">Ricardo Santos</a>
-<br>
+<br />
 <a href="saotome.html">Juliana Saotome</a>
-<br>
+<br />
 <a href="Gabriel.html">Gabriel Truzzi</a>
-<br>
+<br />
 <a href="giovani.html">Giovani Cardoso</a>
-<br>
+<br />
 <a href="murilo.html">Murilo Henrique</a>
 <a href="leticia.html">Leticia Lofiego</a>
-<br>
+<br />
 <a href="raphael.html">Raphael Feitosa</a>
-<br>
+<br />
 <a href="mariaclara.html">Maria Clara Tameirão</a>
-<br>
+<br />
 <a href="neli.html">Néli Maximino</a>
-<br>
+<br />
 <a href="bruna.html">Bruna Correia de Oliveira</a>
-<br>
+<br />
 <a href="talita.html">Talita Ventura</a>
-<br>
+<br />
 <a href="lu.html">Luisa</a>
-<br>
+<br />
 <a href="giba.html">Giba</a>
-<br>
+<br />
 <a href="isaacRLM.html">Isaac</a>
-<br>
+<br />
 <a href="kevin.html">Kevin</a>
+<br />
+<a href="alan.html">Alan</a>
