--- a/alan.html
+++ b/alan.html
@@ -9,6 +9,6 @@
     <h1>Olá devs :)</h1>
     <p>Prazer, meu nome é Alan Neves<br /></p>
     <p>Este é meu github:</p>
-    <a href="https//github.com/alan-neves">clique aqui</a>
+    <a href="">clique aqui</a>
   </body>
 </html>
