alterei o neli.html

--- a/neli.html
+++ b/neli.html
@@ -1,1 +1,57 @@
-Neli Maximino
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Gatinhos Animados</title>
+    <style>
+        body {
+            background-color: #fff0f5;
+            text-align: center;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            padding: 30px;
+        }
+
+        h1 {
+            font-size: 4em;
+            color: #ff69b4;
+            margin-bottom: 40px;
+        }
+
+        .linha {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            margin-bottom: 30px;
+        }
+
+        .linha img {
+            width: 250px;
+            height: auto;
+            border-radius: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease;
+        }
+
+        .linha img:hover {
+            transform: scale(1.05);
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Oi 😺</h1>
+
+    <div class="linha">
+        <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Gatinho animado 1">
+        <img src="https://media.giphy.com/media/mlvseq9yvZhba/giphy.gif" alt="Gatinho animado 2">
+    </div>
+    <div class="linha">
+        <img src="https://media.giphy.com/media/13borq7Zo2kulO/giphy.gif" alt="Gatinho animado 3">
+        <img src="https://media.giphy.com/media/v6aOjy0Qo1fIA/giphy.gif" alt="Gatinho animado 4">
+    </div>
+    <div class="linha">
+        <img src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif" alt="Gatinho animado 5">
+    </div>
+
+</body>
+</html>
