--- a/monica.html
+++ b/monica.html
@@ -1,1 +1,45 @@
-<h3>Teste</h3>
+<<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Minha Página HTML</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #4CAF50;
+            padding: 20px;
+            color: white;
+            text-align: center;
+        }
+        main {
+            padding: 20px;
+        }
+        footer {
+            background-color: #ddd;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Bem-vindo à minha página!</h1>
+    </header>
+
+    <main>
+        <p>Este é um exemplo básico de página HTML com um pouco de CSS.</p>
+    </main>
+
+    <footer>
+        &copy; 2025 Minha Página
+    </footer>
+</body>
+</html>
